# wasm-performance

./: README.md  Rezultati.xlsx  index.html  input.utils.js  package-lock.json  package.json  rsw.toml  vite.config.ts
@rust/sample-module/: Cargo.toml
blazor-impl/: L_test_Blazor.txt  M_test_Blazor.txt  README.md  S_test_Blazor.txt  blazor-impl.sln
blazor-impl/blazor-impl/: App.razor  Program.cs  _Imports.razor
cpp-impl/: .gitignore  L_test__C_03.txt  L_test_С_0z.txt  M_test__C_03.txt  M_test_С_0z.txt  README.md  S_test_C_03.txt  S_test_С_0z.txt  index.html  julia.cc  julia.h  package.json  run.sh
golang-impl/: L_test_go.txt  M_test_go.txt  README.md  S_test_go.txt  index.html  main.go  main.wasm
js-impl/: L_test_js.txt  M_test_js.txt  README.md  S_test_js.txt  index.html  input.utils.js  julia.js
js-impl-obj/: L_test_js-obj.txt  M_test_js-obj.txt  README.md  S_test_js-obj.txt  index.html  input.utils.js  julia.js
kotlin-impl/: .gitignore  L_test_kotlin.txt  M_test_Kotlin.txt  README.md  S_test_Kotlin.txt  build.gradle.kts  package-lock.json  package.json  settings.gradle.kts
kotlin-impl/puppeteer/: test_js_impl.js
puppeteer/: matrix-generator.js  test_js_impl.js
puppeteer/serv/: index.js  package-lock.json  package.json
puppeteer/test-data/: data-gull.json  data.json  matrix_input.json
rust-impl/: .gitignore  L_test_Rust.txt  M_test_Rust.txt  README.md  S_test_Rust.txt  index.html  package-lock.json  package.json  tsconfig.json
rust-impl/@rust/sample-module/: Cargo.toml
rust-impl/@rust/sample-module/src/: lib.rs
(+6 files in other folders)
