[package]
name = "sample-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 3

[dependencies]
serde = { version = "1.0", features = ["derive"] }

wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.5.0"
num-complex = "0.4.0"

[dev-dependencies]
js-sys = "0.3.64"
